--- a/sales.html
+++ b/sales.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <h1>Salmon Cookie Average Sales</h1>
+    <h1>Average Salmon Cookie Sales Per Store</h1>
     <h2>1st and Pike</h2>
     <ul id="first_and_pike"></ul>
 
@@ -20,9 +20,6 @@
 
     <h2>Alki</h2>
     <ul id="alki"></ul>
-
-
-
 
     <script type="text/javascript" src="app.js"></script>
   </body>
