--- a/sales.html
+++ b/sales.html
@@ -6,7 +6,10 @@
   </head>
   <body>
     <h1>Average Salmon Cookie Sales Per Store</h1>
-    <h2>1st and Pike</h2>
+    <table id="sales_table">
+    </table>
+
+    <!-- <h2>1st and Pike</h2>
     <ul id="first_and_pike"></ul>
 
     <h2>SeaTac Airport</h2>
@@ -19,7 +22,7 @@
     <ul id="capitol_hill"></ul>
 
     <h2>Alki</h2>
-    <ul id="alki"></ul>
+    <ul id="alki"></ul> -->
 
     <script type="text/javascript" src="app.js"></script>
   </body>
