--- a/sales.html
+++ b/sales.html
@@ -2,28 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Daily Sales Projection</title>
+    <link href="style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Average Salmon Cookie Sales Per Store</h1>
+    <h1>Salmon Cookie Store Projections</h1>
+
+    <h2>Projected Cookie Sales</h2>
     <table id="sales_table">
     </table>
 
-    <!-- <h2>1st and Pike</h2>
-    <ul id="first_and_pike"></ul>
-
-    <h2>SeaTac Airport</h2>
-    <ul id="seatac_airport"></ul>
-
-    <h2>Seattle Center</h2>
-    <ul id="seattle_center"></ul>
-
-    <h2>Capitol Hill</h2>
-    <ul id="capitol_hill"></ul>
-
-    <h2>Alki</h2>
-    <ul id="alki"></ul> -->
-
+    <h2>Projected Employees Needed</h2>
+    <table id="employee_table">
+    </table>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
