--- a/sales.html
+++ b/sales.html
@@ -13,16 +13,16 @@
         <legend>Enter a new store</legend>
 
         <label for="location">Location: </label>
-        <input name="location" type="text" size="80" />
+        <input name="location" type="text" size="80" required />
 
         <label for="min_customers">Minimum Customers Per Hour: </label>
-        <input name="min_customers" type="text" size="57" />
+        <input name="min_customers" type="text" size="57" required />
 
         <label for="max_customers">Maximum Customers Per Hour: </label>
-        <input name="max_customers" type="text" size="57" />
+        <input name="max_customers" type="text" size="57" required />
 
         <label for="avg_cookies">Average Cookies Per Customer: </label>
-        <input name="avg_cookies" type="text" size="57" />
+        <input name="avg_cookies" type="text" size="57" required />
 
         <button type="submit">Create store</button>
       </fieldset>
