fixed small bugs made while correcting linter errors

--- a/index.html
+++ b/index.html
@@ -23,10 +23,15 @@
       <h3>Our Locations</h3>
       <ul>
         <li>1st &amp; Pike</li>
+        <p>Address: 86 Pike Pl, Seattle, WA 98101</p>
         <li>SeaTac Airport</li>
+        <p>Address: 17801 International Blvd, Seattle, WA 98158</p>
         <li>Seattle Center</li>
+        <p>Address: 305 Harrison St, Seattle, WA 98109</p>
         <li>Capitol Hill</li>
+        <p>Address: 2101 N Northlake Way, Seattle, WA 98103</p>
         <li>Alki</li>
+        <p>Address: 2666 Alki Ave SW, Seattle, WA 98116</p>
       </ul>
       <p>All locations open 7 days a week, 9am - 8pm</p>
     </aside>
